--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	
 	"engines": { "node": ">= 0.6" },
 
-	"dependencies": { "edge": "*" },
+	"dependencies": { },
 
 	"homepage": "https://github.com/dfinke/edge-ps",
 
